data/derived/comb/progs/unify/prog4742.ml.out
Characters 68-69:
  wwhile(f, f b)
         ^
Error: This expression has type ('a -> 'a) * bool
       but an expression was expected of type 'b -> 'b * bool
